--- a/app-migrate/db/db-update-0.8.1
+++ b/app-migrate/db/db-update-0.8.1
@@ -1,8 +1,26 @@
-db.getCollection('unsupervisedLearnings').renameCollection("clusterings")
+db.getCollection('dataset_settings').update({},
+	{$set:{"extraNavigationItems":[]}},
+	{multi: true}
+)
 
-db.getCollection('clusterings').find({}).forEach(function(item)
+
+db.getCollection('dataset_imports').update({'setting': {$exists: true}},
+	{$set:{"setting.extraNavigationItems":[]}},
+        {multi: true}
+)
+
+
+db.getCollection('dictionaries').find({'classificationResults': {$exists: true}}).forEach(function(item)
 {
-    const parts = item.concreteClass.split('.');
-    item.concreteClass = "org.incal.spark_ml.models.clustering." + parts[parts.length - 1];
-    db.getCollection('clusterings').save(item);
+    var toUpdate = false
+    for(i = 0; i != item.classificationResults.length; ++i)
+    {
+	var result = item.classificationResults[i];
+	result["runSpec-learningSetting-collectOutputs"] = false;
+        toUpdate = true;
+    }
+
+    if (toUpdate) {
+        db.getCollection('dictionaries').save(item);
+    }
 })
