Side categorical tree with interactions (field selection, drag-and-drop) finished. Closes #34.

--- a/app-migrate/db/db-update-0.8.1
+++ b/app-migrate/db/db-update-0.8.1
@@ -6,7 +6,7 @@ db.getCollection('dataset_settings').update({},
 
 db.getCollection('dataset_imports').update({'setting': {$exists: true}},
 	{$set:{"setting.extraNavigationItems":[]}},
-        {multi: true}
+    {multi: true}
 )
 
 
@@ -24,3 +24,13 @@ db.getCollection('dictionaries').find({'classificationResults': {$exists: true}}
         db.getCollection('dictionaries').save(item);
     }
 })
+
+db.getCollection('dataset_settings').update({},
+	{$set:{"showSideCategoricalTree":true}},
+	{multi: true}
+)
+
+db.getCollection('dataset_imports').update({'setting': {$exists: true}},
+	{$set:{"setting.showSideCategoricalTree":true}},
+    {multi: true}
+)
