Introducing locked flag for users and checking if unset before every login. Closes #32

--- a/app-migrate/db/db-update-0.8.1
+++ b/app-migrate/db/db-update-0.8.1
@@ -34,3 +34,8 @@ db.getCollection('dataset_imports').update({'setting': {$exists: true}},
 	{$set:{"setting.showSideCategoricalTree":true}},
     {multi: true}
 )
+
+db.getCollection('users').update({},
+	{$set:{"locked":false}},
+    {multi: true}
+)
